--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lato:wght@100;300;400;700;900&family=Montserrat:ital,wght@1,300&family=Nunito:wght@300&family=Open+Sans:ital,wght@0,300;1,300&family=Outfit:wght@200;300&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,800;1,200;1,300;1,400;1,600&family=Roboto:wght@100&family=Square+Peg&family=Varela+Round&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,7 +36,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0; font-family: 'Poppins', sans-serif">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
